--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js input.json",
+    "build": "npm run lint && npm run test && babel src --out-dir build",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -13,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
+    "moment-weekday-calc": "^1.1.5"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nock": "^13.5.4"
   }
 }
